--- a/modules/upgrade/pages/client-migration.adoc
+++ b/modules/upgrade/pages/client-migration.adoc
@@ -2,15 +2,15 @@
 = Client Migration
 
 ////
-Upgrading traditional clients from earlier {slea}{nbsp}12 Service Packs to later {slea}{nbsp}12 Service Packs is fully automated.
-For example, upgrading from {slea}{nbsp}12{nbsp}SP1 to {slea}{nbsp}12{nbsp}SP4.
-This also applies for other supported products based on {slea}{nbsp}12.
+Upgrading traditional clients from earlier SLE{nbsp}12 Service Packs to later SLE{nbsp}12 Service Packs is fully automated.
+For example, upgrading from SLE{nbsp}12{nbsp}SP1 to SLE{nbsp}12{nbsp}SP4.
+This also applies for other supported products based on SLE{nbsp}12.
 
 ////
 
-Upgrading traditional clients from {slea}{nbsp}12 with the latest Service Pack to {slea}{nbsp}15 is automated, but you will need to do some preparation steps before you can upgrade.
+Upgrading traditional clients from SLE{nbsp}12 with the latest Service Pack to SLE{nbsp}15 is automated, but you will need to do some preparation steps before you can upgrade.
 
-Upgrading traditional clients from earlier {slea}{nbsp}15 Service Packs to later {slea}{nbsp}15 Service Packs is fully automated.
+Upgrading traditional clients from earlier SLE{nbsp}15 Service Packs to later SLE{nbsp}15 Service Packs is fully automated.
 
 For supported {sle}{nbsp}15 upgrade paths, see https://documentation.suse.com/sles/15-SP1/html/SLES-all/cha-upgrade-paths.html
 
@@ -23,9 +23,9 @@ This process cannot be used to upgrade Salt clients.
 
 
 
-== Upgrade Clients from {slea}{nbsp}12 to {slea}{nbsp}15
+== Upgrade Clients from SLE{nbsp}12 to SLE{nbsp}15
 
-Your clients must have the latest available {slea}{nbsp}12 Service Pack, with all the latest updates applied.
+Your clients must have the latest available SLE{nbsp}12 Service Pack, with all the latest updates applied.
 Before you start, ensure that the system is up to date and all updates have been installed successfully.
 
 The upgrade is controlled by {yast} and {ay}, it does not use Zypper.
@@ -33,7 +33,7 @@ The upgrade is controlled by {yast} and {ay}, it does not use Zypper.
 
 === Prepare to Migrate
 
-Before you can migrate your client from {slea}{nbsp}12 to {slea}{nbsp}15, you need to make these preparations:
+Before you can migrate your client from SLE{nbsp}12 to SLE{nbsp}15, you need to make these preparations:
 
 . Prepare installation media
 . Create an auto-installation distribution
@@ -124,12 +124,12 @@ Approximately three minutes after the job was fetched, the client will go down f
 
 ////
 
-== Upgrade Clients within {slea}{nbsp}12
+== Upgrade Clients within SLE{nbsp}12
 
 
-Traditional clients on earlier {slea}{nbsp}12 Service Packs can be upgraded to later {slea}{nbsp}12 Service Packs in the {productname} {webui}.
+Traditional clients on earlier SLE{nbsp}12 Service Packs can be upgraded to later SLE{nbsp}12 Service Packs in the {productname} {webui}.
 
-For example, upgrading from {slea}{nbsp}12{nbsp}SP1 to {slea}{nbsp}12{nbsp}SP4.
+For example, upgrading from SLE{nbsp}12{nbsp}SP1 to SLE{nbsp}12{nbsp}SP4.
 
 Before you begin the migration, make sure that the migration target channels are completely mirrored.
 For the upgrade to {sle}{nbsp}12 SP4, at least the [systemitem]``SLES12-SP4-Pool`` base channel with the [systemitem]``SLE-Manager-Tools12-Pool`` child channel for your architecture is required.
