--- a/modules/upgrade/pages/upgrade-script-example.adoc
+++ b/modules/upgrade/pages/upgrade-script-example.adoc
@@ -3,7 +3,7 @@
 
 
 This section contains an example autoinstallation script.
-Use this script as the basis for an upgrade from {slea}{nbsp}12{nbsp}SP4 to {slea}{nbsp}15.
+Use this script as the basis for an upgrade from SLE{nbsp}12{nbsp}SP4 to SLE{nbsp}15.
 
 .Example: Autoinstallation Script
 ----
