--- a/modules/reference/pages/systems/system-details.adoc
+++ b/modules/reference/pages/systems/system-details.adoc
@@ -115,7 +115,7 @@ For example, the system may be a production system that should not receive updat
 [IMPORTANT]
 ====
 Locking a system in the Web interface _will not_ prevent any actions that originate from the client system.
-For example, if a user logs in to the client directly and runs {yast} Online Update (on {slea}) or [command]``pup`` (on {rhela}), the update tool will install available patches even if the system is locked in the Web interface.
+For example, if a user logs in to the client directly and runs {yast} Online Update (on SLE) or [command]``pup`` (on {rhela}), the update tool will install available patches even if the system is locked in the Web interface.
 
 Locking a system _does not_ restrict the number of users who can access the system via the Web interface.
 If you want to restrict access to the system, associate that system with a System Group and assign a System Group Administrator to it.
