Fix: hide a comment

--- a/modules/salt/pages/salt-config-management.adoc
+++ b/modules/salt/pages/salt-config-management.adoc
@@ -112,7 +112,8 @@ file.managed:
 ----
 
 
-This content is in modules/salt/pages/salt-states.adoc LKB 2019-08-19
+// This content is in modules/salt/pages/salt-states.adoc LKB 2019-08-19
+
 == Group States
 
 Pillar data can be used to perform bulk actions, like applying all assigned states to clients within the group.
