--- a/modules/client-configuration/pages/vhm-aws.adoc
+++ b/modules/client-configuration/pages/vhm-aws.adoc
@@ -1,7 +1,7 @@
 [[vhm-aws]]
 = VHM and Amazon Web Services
 
-You can use a {productname} VHM to manage Amazon Web Services (AWS) clusters.
+You can use a {productname} VHM to gather your instances from Amazon Web Services (AWS).
 
 The VHM allows {productname} to obtain and report information about your clusters, including the ability to do CVE audits, and report if containers are outdated.
 For more information on VHMs, see xref:client-configuration:vhm.adoc[].
