edits per feedback

--- a/modules/client-configuration/pages/vhm-kubernetes.adoc
+++ b/modules/client-configuration/pages/vhm-kubernetes.adoc
@@ -3,7 +3,7 @@
 
 You can use a {productname} VHM to manage {k8s} clusters.
 
-The VHM allows {productname} to obtain and report information about your clusters, including the ability to do CVE audits, and report if containers are outdated.
+The VHM allows {productname} to obtain and report information about your clusters.
 For more information on VHMs, see xref:client-configuration:vhm.adoc[].
 
 
