--- a/modules/client-configuration/pages/vhm-azure.adoc
+++ b/modules/client-configuration/pages/vhm-azure.adoc
@@ -1,9 +1,9 @@
 [[vhm-azure]]
 = VHM and Azure
 
-You can use a {productname} VHM to manage Microsoft Azure clusters.
+You can use a {productname} VHM to gather instances from Microsoft Azure.
 
-The VHM allows {productname} to obtain and report information about your clusters, including the ability to do CVE audits, and report if containers are outdated.
+The VHM allows {productname} to obtain and report information about your virtual machines.
 For more information on VHMs, see xref:client-configuration:vhm.adoc[].
 
 
@@ -12,8 +12,6 @@ For more information on VHMs, see xref:client-configuration:vhm.adoc[].
 
 
 The Virtual Host Manager (VHM) runs on the {productname} Server.
-
-To run a VHM, your {productname} Server will need to have port 443 open, in order to access the clients.
 
 Ensure you have installed the [systemitem]``virtual-host-gatherer-libcloud`` package on the {productname} Server.
 
