--- a/modules/client-configuration/pages/vhm-caasp.adoc
+++ b/modules/client-configuration/pages/vhm-caasp.adoc
@@ -1,7 +1,7 @@
 [[kubernetes]]
 = VHM and SUSE Container-as-a-Service Platform
 
-You can use a {productname} VHM to manage SUSE Container-as-a-Service Platform ({caasp}) clusters.
+You can use a {productname} VHM to gather instances from SUSE Container-as-a-Service Platform ({caasp}).
 
-The VHM allows {productname} to obtain and report information about your clusters, including the ability to do CVE audits, and report if containers are outdated.
+The VHM allows {productname} to obtain and report information about your virtual machines.
 For more information on VHMs, see xref:client-configuration:vhm.adoc[].
