--- a/modules/client-configuration/pages/vhm-gce.adoc
+++ b/modules/client-configuration/pages/vhm-gce.adoc
@@ -1,9 +1,9 @@
 [[vhm-hce]]
 = VHM and Google Compute Engine
 
-You can use a {productname} VHM to manage Google Compute Engine (GCE) clusters.
+You can use a {productname} VHM to gather instances from Google Compute Engine (GCE).
 
-The VHM allows {productname} to obtain and report information about your clusters, including the ability to do CVE audits, and report if containers are outdated.
+The VHM allows {productname} to obtain and report information about your virtual machines.
 For more information on VHMs, see xref:client-configuration:vhm.adoc[].
 
 
