--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -25,10 +25,11 @@ ifndef::backend-pdf[]
 *** xref:master-fingerprint.adoc[Master Fingerprint]
 *** xref:repo-metadata.adoc[Repository Metadata]
 *** xref:mirror-sources.adoc[Mirror Sources]
+*** xref:custom-ssl.adoc[Custom SSL Certificates]
+*** xref:gpg-keys.adoc[GPG Keys]
 // Authentication Methods
 ** xref:auth-methods.adoc[Authentication Methods]
-// Custom SSL
-** xref:custom-ssl.adoc[Custom SSL Certificates]
+
 // Backing up
 ** xref:backup-restore.adoc[Backing Up and Restoring]
 ** xref:space-management.adoc[Managing Disk Space]
@@ -104,17 +105,18 @@ include::modules/administration/pages/disconnected-setup.adoc[leveloffset=+2]
 include::modules/administration/pages/iss.adoc[leveloffset=+1]
 
 // Security
-include::modules/administration/pages/master-fingerprint.adoc[leveloffset=+1]
+include::modules/administration/pages/master-fingerprint.adoc[leveloffset=+2]
 
-include::modules/administration/pages/repo-metadata.adoc[leveloffset=+1]
+include::modules/administration/pages/repo-metadata.adoc[leveloffset=+2]
 
-include::modules/administration/pages/mirror-sources.adoc[leveloffset=+1]
+include::modules/administration/pages/mirror-sources.adoc[leveloffset=+2]
+
+include::modules/administration/pages/custom-ssl.adoc[leveloffset=+2]
+
+include::modules/administration/pages/gpg-keys.adoc[leveloffset=+2]
 
 // Authentication Methods
 include::modules/administration/pages/auth-methods.adoc[leveloffset=+1]
-
-// Custom SSL
-include::modules/administration/pages/custom-ssl.adoc[leveloffset=+1]
 
 // Backing up
 include::modules/administration/pages/backup-restore.adoc[leveloffset=+1]
