--- a/modules/reference/pages/systems/virtual-host-managers.adoc
+++ b/modules/reference/pages/systems/virtual-host-managers.adoc
@@ -3,7 +3,7 @@
 
 Virtual Host Managers (VHMs) are used to gather information from a range of client types.
 
-VHMs can be used to collect public cloud instances and organize them into virtualization groups.
+VHMs can be used to collect private or public cloud instances and organize them into virtualization groups.
 With your virtualized clients organized this way, Taskomatic collects data on the clients for display in the {productname}{ {webui}.
 VHMs also allow you to use subscription matching on your virtualized clients.
 
