First draft & file rename

--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -28,7 +28,7 @@ ifndef::backend-pdf[]
 // Authentication Methods
 ** xref:auth-methods.adoc[Authentication Methods]
 // Custom SSL
-** xref:custom-ssl.adoc[Custom SSL Certificates]
+** xref:ssl-certs.adoc[Custom SSL Certificates]
 // Backing up
 ** xref:backup-restore.adoc[Backing Up and Restoring]
 ** xref:space-management.adoc[Managing Disk Space]
@@ -114,7 +114,7 @@ include::modules/administration/pages/mirror-sources.adoc[leveloffset=+1]
 include::modules/administration/pages/auth-methods.adoc[leveloffset=+1]
 
 // Custom SSL
-include::modules/administration/pages/custom-ssl.adoc[leveloffset=+1]
+include::modules/administration/pages/ssl-certs.adoc[leveloffset=+1]
 
 // Backing up
 include::modules/administration/pages/backup-restore.adoc[leveloffset=+1]
