--- a/modules/administration/pages/ssl-certs.adoc
+++ b/modules/administration/pages/ssl-certs.adoc
@@ -1,9 +1,13 @@
-[[custom-ssl]]
-= Custom SSL Certificates
+[[ssl-certs]]
+= SSL Certificates
 
-You can use custom certificates with {productname} and {productname} Proxy.
+{productname} uses SSL certificates to ensure that clients are registered to the correct server.
+The host name of the SSL keys and certificates must match the fully qualified host name of the client system you deploy them on.
 
-This section covers how to use a third party SSL certificate authority with a new {productname} installation, and replacing existing certificate with new custom certificates.
+By default, {productname} uses a self-signed certificate.
+Additionally, you can create a custom SSL certificate, or use a certificate provided by a third party.
+
+This section covers how to use an SSL certificate authority with a new {productname} installation, and replacing existing certificates with updated certificates.
 
 Before you begin, ensure you have:
 
@@ -25,6 +29,8 @@ Ensure that the intermediate certificate comes first in the combined file.
 
 By default, {productname} uses a self-signed certificate.
 After you have completed the initial setup, you can replace the default certificate with a custom certificate.
+
+
 
 .Procedure: Installing Custom Certificates on a New {productname} Server
 
@@ -74,6 +80,8 @@ configure-proxy.sh
 == Re-Create Existing Server Certificates
 
 If your existing custom certificates have expired or stopped working for any reason, you can generate a new server certificate from the existing CA.
+
+
 
 .Procedure: Re-Creating an Existing Server Certificate
 
@@ -149,6 +157,8 @@ You will need to generate a server certificate RPM for each proxy, using their h
 
 When you have new certificates, you can create the combined RPMs to authenticate the clients.
 
+
+
 .Procedure: Create Combined Certificate RPMs
 
 . Create a new CA file that combines the old and new certificate details, and generate a new RPM:
@@ -169,6 +179,7 @@ rhn-ssl-tool --gen-ca --rpm-only --dir="/root/combined-ssl-build"
 ----
 
 When you have the combined RPMs, you can deploy the combined CA certificates to your clients.
+
 
 
 .Procedure: Deploying Combined Certificates on Traditional Clients
@@ -294,3 +305,55 @@ To complete the process, you need to update the database with this command:
 ----
 
 If you use bootstrap, remember to also update your bootstrap scripts to reflect the new certificate information.
+
+
+
+== Replace Existing CA and Server Certificates
+
+You can replace working certificates on an existing {productname} installation with a new third party certificate.
+In this case, you can replace the old CA certificate RPM with the new one, and update the database.
+
+. On the {productname} Server, at the command prompt, move the old certificate directory to a new location:
++
+----
+mv /root/ssl-build /root/old-ssl-build
+----
+. Generate a CA certificate RPM from the new certificate:
++
+----
+rhn-ssl-tool --gen-ca --rpm-only --dir="/root/ssl-build" --from-cacert=<Path_to_CA_Certificate>
+----
+. Copy the new certificate request file to the [path]``ssl-build`` directory on the {productname} Server:
++
+----
+cp <Certificate_Request_File>.csr /root/ssl-build/<Server_Name>/server.csr
+----
+. Generate a new server certificate RPM:
++
+----
+rhn-ssl-tool --gen-server --rpm-only --dir="/root/ssl-build" --fromserver-key=<Server_Key_File> --from-server-cert=<Server_Cert_File>
+----
+. Deploy the CA certificate on the {productname} Server:
++
+----
+/usr/bin/rhn-deploy-ca-cert.pl --source-dir /root/ssl-build --
+target-dir /srv/www/htdocs/pub/ --trust-dir=/etc/pki/trust/anchors/
+----
+. On the {productname} Server, at the command prompt, install the RPM from the [path]``sslbuild`` directory:
++
+----
+ rpm -Uhv /root/ssl-build/<Server_Name>/rhn-org-httpd-ssl-keypair-susemanager-1.0-[latest].noarch.rpm
+----
+. Update the database:
++
+----
+ /usr/bin/rhn-ssl-dbstore --ca-cert=/root/ssl-build/RHN-ORG-TRUSTEDSSL-CERT
+----
+. Restart services to pick up the changes:
++
+----
+spacewalk-service restart
+----
+
+
+You will need to generate a server certificate RPM for each proxy, using their host names and cnames.
