--- a/modules/administration/pages/ssl-certs.adoc
+++ b/modules/administration/pages/ssl-certs.adoc
@@ -313,6 +313,10 @@ If you use bootstrap, remember to also update your bootstrap scripts to reflect 
 You can replace working certificates on an existing {productname} installation with a new third party certificate.
 In this case, you can replace the old CA certificate RPM with the new one, and update the database.
 
+
+
+.Procedure: Replacing Existing Certificates
+
 . On the {productname} Server, at the command prompt, move the old certificate directory to a new location:
 +
 ----
