--- a/modules/administration/pages/ssl-certs.adoc
+++ b/modules/administration/pages/ssl-certs.adoc
@@ -317,7 +317,11 @@ In this case, you can replace the old CA certificate RPM with the new one, and u
 
 .Procedure: Replacing Existing Certificates
 
-. On the {productname} Server, at the command prompt, move the old certificate directory to a new location:
+. On the {productname} Server, at the command prompt, move the old certificate directory to a backup location:
+
+----
+mv /root/ssl-build /root/backup-ssl-build
+----
 +
 ----
 mv /root/ssl-build /root/old-ssl-build
