Change the place where content staging parameters should be set

--- a/modules/reference/pages/admin/organizations.adoc
+++ b/modules/reference/pages/admin/organizations.adoc
@@ -91,7 +91,7 @@ The clients will download packages in advance and stage them.
 This has the advantage that the package installation action will take place immediately, when the schedule is actually executed.
 This "`pre-fetching`" saves maintenance window time, which is good for service uptime.
 
-For staging contents ("`pre-fetching`"), edit on the client [path]``/etc/sysconfig/rhn/up2date``:
+For staging contents ("`pre-fetching`"), edit on the server [path]``/etc/sysconfig/rhn/up2date``:
 
 ----
 stagingContent=1
