added sles features to nav

--- a/modules/client-configuration/nav-client-config-guide.adoc
+++ b/modules/client-configuration/nav-client-config-guide.adoc
@@ -2,6 +2,7 @@
 ifndef::backend-pdf[]
 
 * xref:client-config-overview.adoc[Client Configuration Guide]
+** xref:supported-features.adoc[Supported Clients and Features]
 // Manual Registration
 ** xref:registration-overview.adoc[Registration Overview]
 *** xref:registration-webui.adoc[Registering with the Web UI]
@@ -57,6 +58,8 @@ include::./branding/pdf/entities.adoc[]
 :toclevels: 3
 
 include::modules/client-configuration/pages/client-config-overview.adoc[leveloffset=+1]
+
+include::modules/client-configuration/pages/supported-features.adoc[leveloffset=+2]
 
 // Manual Registration
 
