--- a/modules/client-configuration/pages/clients-and-activation-keys.adoc
+++ b/modules/client-configuration/pages/clients-and-activation-keys.adoc
@@ -37,6 +37,7 @@ For more information, see xref:reference:systems/activation-keys.adoc[].
 ====
 +
 . In the [guimenu]``Base Channels`` drop-down box, select the appropriate base software channel, and allow the relevant child channels to populate.
+For more information, see xref:reference:admin/setup-wizard.adoc#vle.webui.admin.wizard.products[] and xref:administration:custom-channels.adoc[].
 . Select the child channels you need (for example, the mandatory {susemgr} tools and updates channels).
 . We recommend you leave the [guimenu]``Contact Method`` set to [guimenu]``Default``.
 . We recommend you leave the [guimenu]``Universal Default`` setting unchecked.
