--- a/modules/client-configuration/pages/registration-bootstrap.adoc
+++ b/modules/client-configuration/pages/registration-bootstrap.adoc
@@ -78,6 +78,7 @@ In this procedure, you will need to know the exact name of your activation keys.
 Navigate to menu:Home[Overview] and click on [guimenu]``Manage Activation keys``.
 All keys created for channels are listed on this page.
 You must enter the full name of the key you wish to use in the bootstrap script exactly as presented in the key field.
+For more information about activation keys, see xref:client-configuration:clients-and-activation-keys.adoc[].
 
 
 .Procedure: Modifying a Bootstrap Script
