--- a/modules/reference/pages/admin/setup-wizard.adoc
+++ b/modules/reference/pages/admin/setup-wizard.adoc
@@ -3,7 +3,7 @@
 
 Setting up {productname} typically requires some extra steps after installation for common configuration tasks.
 
-The menu:Main Menu[Admin > Setup Wizard] link is displayed when the {productname} {webui} is used for the fist time and can be accessed later at any time by clicking menu:Main Menu[Admin > Setup Wizard].
+The menu:Admin[Setup Wizard] link is displayed when the {productname} {webui} is used for the fist time and can be accessed later at any time by clicking menu:Admin[Setup Wizard].
 On the three tabs configure the HTTP proxy server, organization credentials, and {suse} products.
 
 menu:HTTP Proxy:[]::
@@ -49,7 +49,7 @@ This is a cascading mechanism and allows to unfold several levels according to t
 
 Products based on SUSE Linux Enterprise 15 or higher have a toggle button named btn:[include recommended].
 When the toogle button is enabled on a base product, recommended extensions and modules are automatically selected for synchronization.
-Once the btn:[include recommended] button is enabled, you may uncheck product child channels you are not interested in syncing.
+When the btn:[include recommended] button is enabled, you may uncheck product child channels you are not interested in syncing.
 Recommended channels are labeled accordingly.
 You cannot disable required channels.
 +
@@ -66,7 +66,7 @@ You can repeat this as often as necessary.
 To remove an architecture either click the "`x`" symbol (or press kbd:[Backspace] ).
 +
 
-Once you have made your selection(s), click btn:[Add products] in the upper right area.
+When you have made your selection(s), click btn:[Add products] in the upper right area.
 This is equivalent to running [command]``mgr-sync add products`` or [command]``mgr-sync`` without any arguments.
 +
 
