--- a/modules/salt/pages/salt-ssh.adoc
+++ b/modules/salt/pages/salt-ssh.adoc
@@ -160,7 +160,7 @@ The roster content contains:
 This image provides an overview of the Salt SSH bootstrap process.
 
 .Salt SSH Bootstrap Process
-image::salt-ssh-bootstrap-process.png[]
+// This image needs to be reworked. It probably violates copyright for use of the "minion", LKB 2019-10-30 image::salt-ssh-bootstrap-process.png[]
 
 For more information see these code snippets:
 
