--- a/modules/client-configuration/pages/registration-overview.adoc
+++ b/modules/client-configuration/pages/registration-overview.adoc
@@ -7,7 +7,7 @@ Both methods are described in this manual:
 * For Salt clients, the simplest method is to register your clients using the {productname} {webui}.
 For more information, see xref:client-configuration:registration-webui.adoc[].
 * If you need to have more control over the process, want to register many clients, or are registering traditional clients, we recommend creating a bootstrap script.
-For more information, see xref:client-configuration:bootstrap.adoc[].
+For more information, see xref:client-configuration:registration-bootstrap.adoc[].
 
 You must create an activation key first, to use one of these methods.
 For more information, see xref:client-configuration:clients-and-activation-keys.adoc[].
