--- a/modules/administration/pages/ssl-certs.adoc
+++ b/modules/administration/pages/ssl-certs.adoc
@@ -2,7 +2,7 @@
 = SSL Certificates
 
 {productname} uses SSL certificates to ensure that clients are registered to the correct server.
-The host name of the SSL keys and certificates must match the fully qualified host name of the client system you deploy them on.
+The host name of the SSL Server certificate must match the fully qualified host name of the server system you deploy them on.
 
 By default, {productname} uses a self-signed certificate.
 Additionally, you can create a custom SSL certificate, or use a certificate provided by a third party.
