--- a/modules/administration/pages/ssl-certs.adoc
+++ b/modules/administration/pages/ssl-certs.adoc
@@ -2,7 +2,12 @@
 = SSL Certificates
 
 {productname} uses SSL certificates to ensure that clients are registered to the correct server.
-The host name of the SSL keys and certificates must match the fully qualified host name of the client system you deploy them on.
+
+
+When you create an SSL certificate for your server, it includes the host name of the server it is associated with.
+The certificate is then deployed on the server, and when clients attempt to connect, they check the certificate details.
+If the certificate contains the name of the server they are attempting to connect to, then the connection will be successful.
+The client will also check if the certificate has been signed by a trusted certificate authority.
 
 By default, {productname} uses a self-signed certificate.
 Additionally, you can create a custom SSL certificate, or use a certificate provided by a third party.
