--- a/modules/client-configuration/pages/supported-features-rh.adoc
+++ b/modules/client-configuration/pages/supported-features-rh.adoc
@@ -28,6 +28,10 @@ The icons in this table indicate:
 | Organization custom states    | ``Salt`` | ``Salt`` | ``Salt`` | ``Salt``
 | System set manager (SSM) | ``Salt`` | ``Salt`` | ``Salt`` | ``Salt``
 | Service pack migration | icon:times[role="danger"] | icon:times[role="danger"] | icon:times[role="danger"] | icon:times[role="danger"]
+| Basic Virtual Guest Management icon:asterisk | ``Traditional`` | icon:check[role="green"] | ``Traditional`` | icon:check[role="green"]
+| Advanced Virtual Guest Management icon:asterisk | icon:times[role="danger"] | ``Salt`` | icon:times[role="danger"] | ``Salt``
+| Virtual Guest Installation ({ay}), as Host OS | ``Traditional`` | ``Traditional`` | ``Traditional`` | ``Traditional``
+| Virtual Guest Installation (image template), as Host OS | ``Traditional`` | icon:check[role="green"] | ``Traditional`` | icon:check[role="green"]
 | Virtual host management (VHM) | icon:question[role="gray"] | icon:question[role="gray"] | icon:question[role="gray"] | icon:question[role="gray"]
 | Virtual guest installation ({ay}) | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"]
 | System redeployment ({ay}) | ``Traditional`` | icon:check[role="green"] | ``Traditional`` | icon:check[role="green"]
@@ -52,3 +56,11 @@ The icons in this table indicate:
 | Kiwi buildhost |  icon:times[role="danger"] | icon:times[role="danger"]  |  icon:times[role="danger"] | icon:times[role="danger"]
 | Build Kiwi image with OS |  icon:times[role="danger"] | icon:times[role="danger"]  |  icon:times[role="danger"] | icon:times[role="danger"]
 |===
+
+icon:asterisk Virtual Guest Management:
+
+In this table, virtual guest management is split into basic and advanced.
+
+Basic virtual guest management includes listing VMs, slow refresh, VM lifecycle actions (start, stop, resume, pause), and modifying VM vCPU and Memory.
+
+Advanced virtual guest management includes fast refresh, VM lifecycle actions (delete, reset, power off), modifying VM disk, network, graphical display, and graphical display configuration.
