--- a/modules/client-configuration/pages/supported-features-ubuntu.adoc
+++ b/modules/client-configuration/pages/supported-features-ubuntu.adoc
@@ -33,8 +33,10 @@ The icons in this table indicate:
 | Organization custom states    | ``Salt`` | ``Salt``
 | System set manager (SSM) | ``Salt`` | ``Salt``
 | Service pack migration | icon:times[role="danger"] | icon:times[role="danger"]
-| Virtual host management (VHM) | icon:question[role="gray"] | icon:question[role="gray"]
-| Virtual guest installation ({ay}) | icon:question[role="gray"] | icon:question[role="gray"]
+| Basic Virtual Guest Management icon:asterisk | icon:check[role="green"] | icon:check[role="green"]
+| Advanced Virtual Guest Management icon:asterisk | ``Salt`` | ``Salt``
+| Virtual Guest Installation ({ay}), as Host OS | icon:times[role="danger"] | icon:times[role="danger"]
+| Virtual Guest Installation (image template), as Host OS | ``Salt`` | ``Salt``
 | System redeployment ({ay}) | icon:question[role="gray"] | icon:question[role="gray"]
 | Contact methods | ``Salt``: ZeroMQ, Salt-SSH | ``Salt``: ZeroMQ, Salt-SSH
 | Works with {productname} Proxy | ``Salt`` | ``Salt``
@@ -57,3 +59,11 @@ The icons in this table indicate:
 | Kiwi buildhost |   icon:times[role="danger"] | icon:times[role="danger"]
 | Build Kiwi image with OS |  icon:times[role="danger"] | icon:times[role="danger"]
 |===
+
+icon:asterisk Virtual Guest Management:
+
+In this table, virtual guest management is split into basic and advanced.
+
+Basic virtual guest management includes listing VMs, slow refresh, VM lifecycle actions (start, stop, resume, pause), and modifying VM vCPU and Memory.
+
+Advanced virtual guest management includes fast refresh, VM lifecycle actions (delete, reset, power off), modifying VM disk, network, graphical display, and graphical display configuration.
