--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -81,8 +81,11 @@ The icons in this table indicate:
 | Organization custom states    | ``Salt`` | ``Salt`` | ``Salt`` | ``Salt``
 | System set manager (SSM) | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"] | ``Salt``
 | Service pack migration | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"] | ``Salt``
-| Virtual host management (VHM) | icon:question[role="gray"] | icon:question[role="gray"] | icon:question[role="gray"] | icon:question[role="gray"]
-| Virtual guest installation ({ay}) | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"] | ``Salt``
+| Basic Virtual Guest Management icon:asterisk | ``Traditional`` | icon:check[role="green"] | icon:check[role="green"] | ``Salt`
+| Advanced Virtual Guest Management icon:asterisk | icon:times[role="danger"] | ``Salt`` | ``Salt`` | ``Salt``
+| Virtual Guest Installation ({ay}), as Host OS | ``Traditional`` | ``Traditional`` | ``Traditional`` | icon:times[role="danger"]
+| Virtual Guest Installation (image template), as Host OS | icon:times[role="danger"] | ``Salt`` | ``Salt`` | ``Salt``
+| Virtual Guest Management | icon:times[role="danger"] | ``Salt`` | ``Salt`` | ``Salt``
 | System redeployment ({ay}) | ``Traditional`` | icon:check[role="green"] | icon:check[role="green"] | ``Salt``
 | Contact methods | ``Traditional``: OSAD, RHNSD, SSH-push. ``Salt``: ZeroMQ, Salt-SSH | ``Traditional``: OSAD, RHNSD, SSH-push. ``Salt``: ZeroMQ, Salt-SSH | ``Traditional``: OSAD, RHNSD, SSH-push. ``Salt``: ZeroMQ, Salt-SSH | ``Salt``: ZeroMQ, Salt-SSH
 | Works with {productname} Proxy | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"] | ``Salt``
@@ -105,3 +108,11 @@ The icons in this table indicate:
 | Kiwi buildhost |   icon:times[role="danger"]     | ``Salt``  | icon:question[role="gray"] | icon:question[role="gray"]
 | Build Kiwi image with OS |  icon:times[role="danger"]     | ``Salt``  | icon:question[role="gray"] | icon:times[role="danger"]
 |===
+
+icon:asterisk Virtual Guest Management:
+
+In this table, virtual guest management is split into basic and advanced.
+
+Basic virtual guest management includes listing VMs, slow refresh, VM lifecycle actions (start, stop, resume, pause), and modifying VM vCPU and Memory.
+
+Advanced virtual guest management includes fast refresh, VM lifecycle actions (delete, reset, power off), modifying VM disk, network, graphical display, and graphical display configuration.
