--- a/modules/administration/pages/ssl-certs.adoc
+++ b/modules/administration/pages/ssl-certs.adoc
@@ -50,7 +50,7 @@ export SERVER_CERT=<path_to_web_server_certificate>
 . Complete {productname} setup:
 +
 ----
-yast2 susemanagersetup
+yast susemanager_setup
 ----
 +
 When you are prompted for certificate details during setup, fill in random values.
@@ -58,7 +58,7 @@ The values will be overridden by the values you specified at the command prompt.
 
 [NOTE]
 ====
-Execute the [command]``yast2 susemanagersetup`` command from the same shell you exported the environment variables from.
+Execute the [command]``yast susemanager_setup`` command from the same shell you exported the environment variables from.
 ====
 
 
@@ -114,6 +114,7 @@ spacewalk-service restart
 
 
 
+[[custom-ssl-create-replace-cert]]
 == Create and Replace CA and Server Certificates
 
 If you need to create entirely new certificates for an existing installation, you need to create a combined certificate first.
