--- a/modules/administration/pages/ssl-certs.adoc
+++ b/modules/administration/pages/ssl-certs.adoc
@@ -95,7 +95,7 @@ If your existing custom certificates have expired or stopped working for any rea
 rhn-ssl-tool --gen-server --dir="/root/ssl-build" --set-country="COUNTRY" \
 --set-state="STATE" --set-city="CITY" --set-org="ORGANIZATION" \
 --set-org-unit="ORGANIZATION UNIT" --set-email="name@example.com" \
---set-hostname="susemanager.example.top" --set-cname="example.com"
+--set-hostname="susemanager.example.com" --set-cname="example.com"
 ----
 Ensure that the [systemitem]``set-cname`` parameter is the fully-qualified domain name of your {productname} Server.
 You can use the the [systemitem]``set-cname`` parameter multiple times if you require multiple aliases.
