start with some notes

--- a/modules/administration/pages/key-management.adoc
+++ b/modules/administration/pages/key-management.adoc
@@ -1,2 +1,12 @@
-You can refer to these keys and/or certificates in your kickstart profiles in order to install those keys/certificates on systems during a kickstart. A system will need the correct keys to install signed packages, and correct certificate to be kickstarted by an SUSE Manager Proxy Server or SUSE Manager Server. For more information, see the Reference Guide
+[[gpg-keys]]
+= GPG Keys
 
+
+
+A system will need the correct GPG keys to install signed packages.
+
+GPG Keys are stored as repo meta data.
+
+You usually copy them to the server while syncing a repo for the first time.
+
+Or you import a GPG key while creating a custom channel.
