--- a/modules/retail/pages/retail-components.adoc
+++ b/modules/retail/pages/retail-components.adoc
@@ -17,10 +17,8 @@ This can include database entries of registered systems, Salt pillar data for im
 
 Build hosts can be arbitrary servers or virtual machines.
 They are used to securely build operating system images.
-// REMARK: Check version number
-Build hosts should be based on {sles}{nbsp}12 SP3 or SP4.
 
-
+For more information on build hosts, see xref:administration:image-management.adoc[].
 
 == Branch Server
 
@@ -53,7 +51,7 @@ For more information on {smr} PoS terminals, see documentation on {susemgr} Salt
 
 {smr} supports PoS terminals that boot using both BIOS and UEFI.
 For UEFI booting terminals, you will need to configure the EFI partition in the Saltboot formula.
-For more information on EFI in the Saltboot formula, see xref:retail:retail-formula-saltboot.adoc[].
+For more information on EFI in the Saltboot formula, see xref:salt:formula-saltboot.adoc[].
 
 
 
