--- a/modules/retail/pages/retail-install.adoc
+++ b/modules/retail/pages/retail-install.adoc
@@ -1,9 +1,9 @@
 [[retail-install]]
 = Installation
 
-{smr} can be installed in various ways depending on individual needs.
+{smr} and {smr} Branch Server are installed using the {sles} Unified Installer.
 
-For the initial package installation, we recommend using the SLES Unified Installer.
+
 // REMARK: ATM, the second method is disabled; cf. the jeos installation that here will probably work as well
 // REMARK: Shall we enable retail-install-packages.adoc again?  Or better use jeos?
 // REMARK: For the moment, commenting the following misleading sentences:
