--- a/modules/retail/pages/retail-migration-slepostosuma.adoc
+++ b/modules/retail/pages/retail-migration-slepostosuma.adoc
@@ -15,8 +15,8 @@ Importing and deploying the converted data can also be done in one or multiple s
 
 In this procedure, you create a single data dump in an XML file, convert it to YAML, and migrate it to the new infrastructure all at once.
 
-. Install a {susemgr} server {productnumber} (with the Retail pattern).
-For more information, see xref:retail:retail-install.adoc[].
+. Install a {smr} server {productnumber}.
+For more information, see xref:retail:retail-install-unified.adoc[].
 . On the SLEPOS Admin server export all the data stored in LDAP to an XML file.
 Run this command as an administrator:
 +
@@ -70,8 +70,8 @@ After all the branches are migrated, shutdown and remove the old SLEPOS Admin Se
 
 In this procedure, you migrate the SLEPOS infrastructure and the branches one by one, first exporting and then importing.
 
-. Install a {susemgr} server {productnumber} (with a [literal]``SUSE Manager for Retail Server`` [guimenu]``System Role``).
-For more information, see xref:retail:retail-install.adoc[].
+. Install a {smr} server {productnumber}
+For more information, see xref:retail:retail-install-unified.adoc[].
 
 . On every branch server:
 +
