--- a/modules/retail/pages/retail-offline.adoc
+++ b/modules/retail/pages/retail-offline.adoc
@@ -8,7 +8,6 @@ This feature uses caching to perform updates.
 [IMPORTANT]
 ====
 Offline features are available only for {productname} Server 4.0 and above.
-You must have the Saltboot and PXE formula packages installed.
 ====
 
 
@@ -30,7 +29,7 @@ The parameter is measured in seconds, and defaults to [systemitem]``60``.
 SALT_TIMEOUT = 60
 ----
 
-For more about kernel parameters, see xref:retail:retail-formula-pxe.adoc[].
+For more about kernel parameters, see xref:salt:formula-pxe.adoc[].
 
 
 
