--- a/modules/retail/nav-retail.adoc
+++ b/modules/retail/nav-retail.adoc
@@ -3,33 +3,24 @@ ifndef::backend-pdf[]
 
 * xref:retail-introduction.adoc[Retail Guide]
 ** xref:retail-components.adoc[Components]
-** xref:retail-network-arch.adoc[Network Architecture]
 // Installation
 ** xref:retail-install.adoc[Installing]
 *** xref:retail-requirements.adoc[Requirements]
 *** xref:retail-install-unified.adoc[Installing with the Unified Installer]
-// FIXME: needs research, 2019-07-23, ke:
-// *** xref:retail-install-packages.adoc[Installing from Packages]
+*** xref:retail-network-arch.adoc[Network Architecture]
 *** xref:retail-install-setup.adoc[Setting up]
-*** xref:retail-deploy-terminals.adoc[Deploying Terminals]
-// Formulas
-** xref:retail-formulas-intro.adoc[Formulas]
-// These exist in the Salt Guide now. LKB 2019-09-05
-//*** xref:retail-formula-branchnetwork.adoc[Branch Network Formula]
-//*** xref:retail-formula-dhcpd.adoc[DHCPd Formula]
-//*** xref:retail-formula-imagesync.adoc[Image Sync Formula]
-//*** xref:retail-formula-pxe.adoc[PXE Formula]
-//*** xref:retail-formula-saltboot.adoc[Saltboot Formula]
-//*** xref:retail-formula-tftpd.adoc[TFTPd Formula]
-//*** xref:retail-formula-vsftpd.adoc[VsFTPd Formula]
-// Admin
-** xref:retail-admin.adoc[Administration]
-*** xref:retail-delta-images.adoc[Delta Images]
+// Terminal ops
+** xref:retail-deploy-terminals.adoc[Deploying Terminals]
 *** xref:retail-terminal-names.adoc[Terminal Names]
-*** xref:retail-mass-config.adoc[Mass Configuration]
-*** xref:retail-mass-config-yaml.adoc[Mass Config YAML Example]
 *** xref:retail-offline.adoc[Offline Use]
 *** xref:retail-terminal-ratelimiting.adoc[Rate Limiting Terminals]
+// Formulas
+** xref:retail-formulas-intro.adoc[Formulas]
+// Admin
+** xref:retail-admin.adoc[Administration]
+*** xref:retail-mass-config.adoc[Mass Configuration]
+*** xref:retail-mass-config-yaml.adoc[Mass Configuration YAML Example]
+*** xref:retail-delta-images.adoc[Delta Images]
 // Retail Upgrade
 ** xref:retail-migration-intro.adoc[Retail Upgrade]
 *** xref:retail-prepare-migration.adoc[Prepare for Migration]
@@ -53,8 +44,6 @@ include::modules/retail/pages/retail-introduction.adoc[leveloffset=+1]
 
 include::modules/retail/pages/retail-components.adoc[leveloffset=+2]
 
-include::modules/retail/pages/retail-network-arch.adoc[leveloffset=+2]
-
 // Installation
 include::modules/retail/pages/retail-install.adoc[leveloffset=+2]
 
@@ -65,25 +54,27 @@ include::modules/retail/pages/retail-install-unified.adoc[leveloffset=+3]
 // FIXME: needs research, 2019-07-23, ke:
 // include::modules/retail/pages/retail-install-packages.adoc[leveloffset=+3]
 
+include::modules/retail/pages/retail-network-arch.adoc[leveloffset=+3]
+
 include::modules/retail/pages/retail-install-setup.adoc[leveloffset=+3]
 
-include::modules/retail/pages/retail-deploy-terminals.adoc[leveloffset=+3]
+include::modules/retail/pages/retail-deploy-terminals.adoc[leveloffset=+2]
 
-// Frmulas
+include::modules/retail/pages/retail-terminal-names.adoc[leveloffset=+3]
+
+include::modules/retail/pages/retail-terminal-ratelimiting.adoc[leveloffset=+3]
+
+// Formulas
 include::modules/retail/pages/retail-formulas-intro.adoc[leveloffset=+2]
 
 // Admin
 include::modules/retail/pages/retail-admin.adoc[leveloffset=+2]
 
-include::modules/retail/pages/retail-delta-images.adoc[leveloffset=+3]
-
-include::modules/retail/pages/retail-terminal-names.adoc[leveloffset=+3]
-
 include::modules/retail/pages/retail-mass-config.adoc[leveloffset=+3]
 
 include::modules/retail/pages/retail-mass-config-yaml.adoc[leveloffset=+3]
 
-include::modules/retail/pages/retail-terminal-ratelimiting.adoc[leveloffset=+3]
+include::modules/retail/pages/retail-delta-images.adoc[leveloffset=+3]
 
 // Retail Upgrade
 include::modules/retail/pages/retail-migration-intro.adoc[leveloffset=+1]
