--- a/modules/retail/pages/retail-delta-images.adoc
+++ b/modules/retail/pages/retail-delta-images.adoc
@@ -2,6 +2,7 @@
 = Delta Images
 
 If you have very large images that you need to synchronize to the branch server, you can use delta images to save network bandwidth.
+
 A delta image contains only the differences between two regular images.
 If there are only a few changes between two images, the delta image can be very small.
 Synchronizing a delta image to the branch consumes less network bandwidth but it requires some extra hardware resources on the branch server to rebuild the installable image.
@@ -36,7 +37,7 @@ retail_create_delta POS_Image_JeOS6-6.0.1 POS_Image_JeOS6-6.0.0
 ----
 
 This command will generate the delta image between version 6.0.0 and version 6.0.1.
-The resulting delta file is saved in [path]``/srv/www/os-images`` and the corresponding {sles} file in [path]``/srv/susemanager/pillar_data/images/``.
+The resulting delta file is saved in [path]``/srv/www/os-images`` and the corresponding pillar file in [path]``/srv/susemanager/pillar_data/images/``.
 
 
 
