--- a/modules/retail/pages/retail-deploy-terminals.adoc
+++ b/modules/retail/pages/retail-deploy-terminals.adoc
@@ -80,14 +80,19 @@ salt <branch_server_salt_id> state.apply image-sync
 ----
 
 
-=== Using a 32-bit Default Boot Image
+=== Using a {sles}11 SP3 32-bit based images
 
-If you have 32-bit machines included in your branch, then you must use a 32-bit default boot image.
+If you have 32-bit machines included in your branch, then you must use a 32-bit boot image as a default boot image.
+
+[WARNING]
+====
+If 32-bit boot image is not used as a default boot image, 32-bit terminals will be unable to boot and operate properly.
+====
 
 You can check the available boot images and their architecture from the command line:
 
 ----
-salt "branch" pillar.get boot_images
+salt <branch_server_salt_id> pillar.item boot_images
 ----
 
 Output:
@@ -107,6 +112,7 @@ legacy-6.0.0:
 In this example, the [systemitem]``legacy-6.0.0`` boot image is 32-bit.
 
 You can set the default boot image in the ``Image Synchronization`` formula on the branch server, by adding the chosen boot image name to the [guimenu]``Default boot image`` field.
+For more information about ``Image Synchronization`` formula, see xref:salt:formula-imagesync.adoc[].
 
 image::retail_imagesync_formula.png[scaledwidth=80%]
 
