--- a/modules/salt/pages/formula-saltboot.adoc
+++ b/modules/salt/pages/formula-saltboot.adoc
@@ -9,6 +9,11 @@ The Saltboot formula is meant to be used as a group formula.
 Enable and configure Saltboot formula for hardware type groups.
 ====
 
+[IMPORTANT]
+====
+To apply changes to a terminal, terminal needs to be restarted. Applying highstate does not have any effect on running terminals.
+====
+
 .Procedure: Configuring the Hardware Type Group with Saltboot
 
 . Open the details page for your new hardware type group, and navigate to the [guimenu]``Formulas`` tab.
@@ -22,22 +27,30 @@ Enable and configure Saltboot formula for hardware type groups.
 * In the [guimenu]``Disk Label`` field, select [systemitem]``gpt``.
 . In the [guimenu]``Partition`` section, set these parameters for [guimenu]``Partition 1``:
 * In the [guimenu]``Partition symbolic ID`` field, enter a custom name for the partition (for example, [systemitem]``p1``).
+* In the [guimenu]``Partition size`` use value 500.
+* In the [guimenu]``Device mount point`` use [path]``/boot/efi``.
+* In the [guimenu]``Filesystem format`` use [systemitem]``vfat``.
+* In the [guimenu]``OS Image to deploy`` field, leave it empty.
+* In the [guimenu]``Partition encryption password`` field, leave it empty.
+* In the [guimenu]``Partition flags`` use [systemitem]``boot``.
+. In the [guimenu]``Partition`` section, set these parameters for [guimenu]``Partition 2``:
+* In the [guimenu]``Partition symbolic ID`` field, enter a custom name for the partition (for example, [systemitem]``p2``).
 * In the [guimenu]``Partition size`` field, specify a size for the partition in Mebibytes (MiB).
 * In the [guimenu]``Device mount point`` field, select a location to mount the partition (for example, [path]``/data``).
 * In the [guimenu]``Filesystem format`` field, select your preferred format (for example, [systemitem]``xfs``).
 * In the [guimenu]``OS Image to deploy`` field, leave it empty.
 * In the [guimenu]``Partition encryption password`` field, enter a password if you want to encrypt the partition.
 * In the [guimenu]``Partition flags`` field, leave it empty.
-. In the [guimenu]``Partition`` section, set these parameters for [guimenu]``Partition 2``:
-* In the [guimenu]``Partition symbolic ID`` field, enter a custom name for the partition (for example, [systemitem]``p2``).
+. In the [guimenu]``Partition`` section, set these parameters for [guimenu]``Partition 3``:
+* In the [guimenu]``Partition symbolic ID`` field, enter a custom name for the partition (for example, [systemitem]``p3``).
 * In the [guimenu]``Partition size`` field, specify a size for the partition in Mebibytes (MiB).
 * In the [guimenu]``Device mount point`` field, leave it empty.
 * In the [guimenu]``Filesystem format`` field, select [systemitem]``swap``.
 * In the [guimenu]``OS Image to deploy`` field, leave it empty.
 * In the [guimenu]``Partition encryption password`` field, enter a password if you want to encrypt the partition.
 * In the [guimenu]``Partition flags`` field, select [systemitem]``swap``.
-. In the [guimenu]``Partition`` section, set these parameters for [guimenu]``Partition 3``:
-* In the [guimenu]``Partition symbolic ID`` field, enter a custom name for the partition (for example, [systemitem]``p3``).
+. In the [guimenu]``Partition`` section, set these parameters for [guimenu]``Partition 4``:
+* In the [guimenu]``Partition symbolic ID`` field, enter a custom name for the partition (for example, [systemitem]``p4``).
 * In the [guimenu]``Partition size`` field, leave it empty.
 This will ensure the partition uses up all remaining space.
 * In the [guimenu]``Device mount point`` field, select [systemitem]``/``.
@@ -56,7 +69,10 @@ This will ensure you use the latest available version.
 
 The Saltboot formula helps you with setting up special partition types.
 
-
+[IMPORTANT]
+====
+For terminal to be able to boot locally, either [systemitem]``BIOS grub`` or [systemitem]``EFI`` partition must be configured.
+====
 
 === BIOS grub Partition
 
@@ -93,13 +109,12 @@ Leave the other fields empty.
 
 
 
+== Troubleshooting the Saltboot Formula
+
 === `msdos` Disklabel Limitations
 
 On `msdos` disk label it is possible to create maximally 4 primary partitions, extended partitions are not supported.
 This limitation is not present on `GPT` disk label.
 
-
-
-== Troubleshooting the Saltboot Formula
 
 For more information on troubleshooting problems with the Saltboot formula, see xref:administration:tshoot-saltboot.adoc[].
