--- a/modules/administration/pages/ssl-certs.adoc
+++ b/modules/administration/pages/ssl-certs.adoc
@@ -5,7 +5,7 @@
 
 When you create an SSL certificate for your server, it includes the host name of the server it is associated with.
 The certificate is then deployed on the server, and when clients attempt to connect, they check the certificate details.
-If the certificate contains the name of the server they are attempting to connect to, then the connection will be successful.
+If the certificate contains the name of the server they are attempting to connect to, the connection will be successful.
 The client will also check if the certificate has been signed by a trusted certificate authority.
 
 By default, {productname} uses a self-signed certificate.
