--- a/modules/administration/pages/ssl-certs.adoc
+++ b/modules/administration/pages/ssl-certs.adoc
@@ -3,7 +3,7 @@
 
 {productname} uses SSL certificates to ensure that clients are registered to the correct server.
 
-When you create an SSL certificate for your server, it includes the host name of the server it is associated with.
+When you create an SSL certificate for your server, the certificate includes the host name of the server it is associated with.
 The certificate is then deployed on the server, and when clients attempt to connect, they check the certificate details.
 If the certificate contains the name of the server they are attempting to connect to, the connection will be successful.
 The client will also check if the certificate has been signed by a trusted certificate authority.
