--- a/modules/administration/pages/ssl-certs.adoc
+++ b/modules/administration/pages/ssl-certs.adoc
@@ -312,7 +312,7 @@ If you use bootstrap, remember to also update your bootstrap scripts to reflect 
 
 
 
-== Replace Existing CA and Server Certificates with third party certificiate
+== Replace Certificates with a Third Party Certificiate
 
 You can replace working certificates on an existing {productname} installation with a new third party certificate.
 In this case, you can replace the old CA certificate RPM with the new one, and update the database.
