--- a/modules/client-configuration/nav-client-config-guide.adoc
+++ b/modules/client-configuration/nav-client-config-guide.adoc
@@ -29,6 +29,13 @@ ifndef::backend-pdf[]
 *** xref:virt-xenkvm.adoc[Virtualization with Xen and KVM]
 *** xref:virt-vmware.adoc[Virtualization with VMWare]
 *** xref:virt-file.adoc[Virtualization with Other Hosts]
+// VHMs
+** xref:vhm.adoc[Virtual Host Managers]
+*** xref:vhm-aws.adoc[VHM and AWS]
+*** xref:vhm-azure.adoc[VHM and Azure]
+*** xref:vhm-gce.adoc[VHM and GCE]
+*** xref:vhm-kubernetes.adoc[VHM and Kubernetes]
+//*** xref:vhm-caasp.adoc[VHM and CaaSP]
 //  Client Admin Tasks
 ** xref:channels.adoc[Channels]
 ifeval::[{suma-content} == true]
@@ -108,6 +115,19 @@ include::modules/client-configuration/pages/virt-xenkvm.adoc[leveloffset=+2]
 include::modules/client-configuration/pages/virt-vmware.adoc[leveloffset=+2]
 
 include::modules/client-configuration/pages/virt-file.adoc[leveloffset=+2]
+
+// VHMs
+include::modules/client-configuration/pages/vhm.adoc[leveloffset=+1]
+
+include::modules/client-configuration/pages/vhm-azure.adoc[leveloffset=+2]
+
+include::modules/client-configuration/pages/vhm-aws.adoc[leveloffset=+2]
+
+include::modules/client-configuration/pages/vhm-gce.adoc[leveloffset=+2]
+
+include::modules/client-configuration/pages/vhm-kubernetes.adoc[leveloffset=+2]
+
+// include::modules/client-configuration/pages/vhm-caasp.adoc[leveloffset=+2]
 
 // Client Admin Tasks
 include::modules/client-configuration/pages/channels.adoc[leveloffset=+1]
