--- a/modules/client-configuration/pages/virt-vmware.adoc
+++ b/modules/client-configuration/pages/virt-vmware.adoc
@@ -11,7 +11,7 @@ Taskomatic can then begin data collection using the VMs API.
 == VHM Setup
 
 
-The Virtal Host Manager (VHM) runs on the {productname} Server.
+The Virtual Host Manager (VHM) runs on the {productname} Server.
 
 To run a VHM, your {productname} Server will need to have port 443 open, in order to access the VMWare API.
 
