--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -13,10 +13,9 @@ ifndef::backend-pdf[]
 *** xref:live-patching-sles12.adoc[Live Patching on SLES 12]
 // Monitoring
 ** xref:monitoring.adoc[Monitoring]
-// Containers
-** xref:kubernetes.adoc[Kubernetes]
 // Public Cloud
-** xref:public-cloud.adoc[Public Cloud]
+// This content is out of date, what isn't out of date is in the Install Guide. LKB 2019-10-14
+// ** xref:public-cloud.adoc[Public Cloud]
 // *** xref:public-cloud-azure.adoc[]
 ** xref:disconnected-setup.adoc[Disconnected Setup]
 // ISS
@@ -90,11 +89,7 @@ include::modules/administration/pages/live-patching-sles12.adoc[leveloffset=+2]
 // Monitoring
 include::modules/administration/pages/monitoring.adoc[leveloffset=+1]
 
-// Containers
-include::modules/administration/pages/kubernetes.adoc[leveloffset=+1]
-
 // Public Cloud
-
 include::modules/administration/pages/public-cloud.adoc[leveloffset=+1]
 // include::modules/administration/pages/public-cloud-azure.adoc[leveloffset=+1]
 
