--- a/modules/administration/pages/ssl-certs.adoc
+++ b/modules/administration/pages/ssl-certs.adoc
@@ -291,7 +291,7 @@ rhnpush -c ssl-ca-channel --nosig \
 
 
 When you have the new certificate in the channel, you can use the {productname} {webui} to update it on all clients and proxies, by synchronizing them with the channel.
-Alternatively, for Salt Clients, you can use menu:Salt[Remote Commands], or apply the highstate.
+Alternatively, for Salt clients, you can use menu:Salt[Remote Commands], or apply the highstate.
 
 
 You will also need to update your proxies to remove the copy of the certificate and the associated RPM.
