--- a/modules/client-configuration/pages/vhm.adoc
+++ b/modules/client-configuration/pages/vhm.adoc
@@ -21,7 +21,7 @@ For more information on using a VHM with {k8s}, see xref:client-configuration:vh
 == SUSE Support and VM Zones
 
 Public cloud providers use regions to define the physical geographic location of the datacenter providing virtual machines.
-For example, [systemitem]``US-East``, or [system]``Asia``.
+For example, [systemitem]``US-East``, or [systemitem]``Asia``.
 
 Regions are then further divided into zones.
 For example, the [systemitem]``US-East`` region might contain zones called [systemitem]``us-east-2a`` and [systemitem]``us-east-2b``, among others.
