--- a/modules/reference/pages/systems/virtual-host-managers.adoc
+++ b/modules/reference/pages/systems/virtual-host-managers.adoc
@@ -4,7 +4,7 @@
 Virtual Host Managers (VHMs) are used to gather information from a range of client types.
 
 VHMs can be used to collect private or public cloud instances and organize them into virtualization groups.
-With your virtualized clients organized this way, Taskomatic collects data on the clients for display in the {productname}{ {webui}.
+With your virtualized clients organized this way, Taskomatic collects data on the clients for display in the {productname} {webui}.
 VHMs also allow you to use subscription matching on your virtualized clients.
 
 You can create a VHM on your {productname} Server, and use it to inventory available public cloud instances.
