--- a/modules/client-configuration/pages/vhm-kubernetes.adoc
+++ b/modules/client-configuration/pages/vhm-kubernetes.adoc
@@ -1,11 +1,10 @@
 [[kubernetes]]
-= Kubernetes
+= VHM and Kubernetes
 
-You can use {productname} to manage {k8s} clusters.
+You can use a {productname} VHM to manage {k8s} clusters.
 
-{productname} communicates with your {k8s} clusters using a virtual host manager.
-This allows {productname} to obtain and report information about your clusters, including the ability to do CVE audits, and report if containers are outdated.
-For more information on virtual host managers, see xref:client-configuration:virt-vmware.adoc[].
+The VHM allows {productname} to obtain and report information about your clusters.
+For more information on VHMs, see xref:client-configuration:vhm.adoc[].
 
 
 To use {productname} with {k8s}, you will need to have your {productname} Server configured for container management, with all required channels present, and a registered container build host available.
@@ -19,9 +18,9 @@ You will also require:
 
 
 
-== Create a {k8s} Virtual Host Manager
+== Create a {k8s} VHM
 
-{k8s} clusters are registered with {productname} as a virtual host manager (VHM).
+{k8s} clusters are registered with {productname} as a VHM.
 
 You will need a ``kubeconfig`` file to register and authorize your {k8s} cluster.
 You can get a ``kubeconfig`` file using the {k8s} command line tool ``kubectl``.
