--- a/modules/client-configuration/pages/supported-features-centos.adoc
+++ b/modules/client-configuration/pages/supported-features-centos.adoc
@@ -30,7 +30,7 @@ The icons in this table indicate:
 | Service pack migration | icon:times[role="danger"] | icon:times[role="danger"]
 | Basic Virtual Guest Management icon:asterisk | ``Traditional`` | icon:check[role="green"]
 | Advanced Virtual Guest Management icon:asterisk | icon:times[role="danger"] | ``Salt``
-| Virtual Guest Installation ({ay}), as Host OS | ``Traditional`` | ``Traditional``
+| Virtual Guest Installation (Kickstart), as Host OS | ``Traditional`` | ``Traditional``
 | Virtual Guest Installation (image template), as Host OS | ``Traditional`` | icon:check[role="green"]
 | System redeployment ({ay}) | ``Traditional`` | icon:check[role="green"]
 | Contact methods | ``Traditional``: OSAD, RHNSD, SSH-push. ``Salt``: ZeroMQ, Salt-SSH | ``Traditional``: OSAD, RHNSD, SSH-push. ``Salt``: ZeroMQ, Salt-SSH
