--- a/modules/client-configuration/pages/supported-features-rh.adoc
+++ b/modules/client-configuration/pages/supported-features-rh.adoc
@@ -30,7 +30,7 @@ The icons in this table indicate:
 | Service pack migration | icon:times[role="danger"] | icon:times[role="danger"] | icon:times[role="danger"] | icon:times[role="danger"]
 | Basic Virtual Guest Management icon:asterisk | ``Traditional`` | icon:check[role="green"] | ``Traditional`` | icon:check[role="green"]
 | Advanced Virtual Guest Management icon:asterisk | icon:times[role="danger"] | ``Salt`` | icon:times[role="danger"] | ``Salt``
-| Virtual Guest Installation ({ay}), as Host OS | ``Traditional`` | ``Traditional`` | ``Traditional`` | ``Traditional``
+| Virtual Guest Installation (Kickstart), as Host OS | ``Traditional`` | ``Traditional`` | ``Traditional`` | ``Traditional``
 | Virtual Guest Installation (image template), as Host OS | ``Traditional`` | icon:check[role="green"] | ``Traditional`` | icon:check[role="green"]
 | Virtual host management (VHM) | icon:question[role="gray"] | icon:question[role="gray"] | icon:question[role="gray"] | icon:question[role="gray"]
 | Virtual guest installation ({ay}) | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"]
