--- a/modules/client-configuration/pages/supported-features-ubuntu.adoc
+++ b/modules/client-configuration/pages/supported-features-ubuntu.adoc
@@ -35,7 +35,7 @@ The icons in this table indicate:
 | Service pack migration | icon:times[role="danger"] | icon:times[role="danger"]
 | Basic Virtual Guest Management icon:asterisk | icon:check[role="green"] | icon:check[role="green"]
 | Advanced Virtual Guest Management icon:asterisk | ``Salt`` | ``Salt``
-| Virtual Guest Installation ({ay}), as Host OS | icon:times[role="danger"] | icon:times[role="danger"]
+| Virtual Guest Installation (Kickstart), as Host OS | icon:times[role="danger"] | icon:times[role="danger"]
 | Virtual Guest Installation (image template), as Host OS | ``Salt`` | ``Salt``
 | System redeployment ({ay}) | icon:question[role="gray"] | icon:question[role="gray"]
 | Contact methods | ``Salt``: ZeroMQ, Salt-SSH | ``Salt``: ZeroMQ, Salt-SSH
