--- a/modules/client-configuration/pages/supported-features-ubuntu.adoc
+++ b/modules/client-configuration/pages/supported-features-ubuntu.adoc
@@ -33,7 +33,7 @@ The icons in this table indicate:
 | Organization custom states    | ``Salt`` | ``Salt``
 | System set manager (SSM) | ``Salt`` | ``Salt``
 | Service pack migration | icon:times[role="danger"] | icon:times[role="danger"]
-| Basic Virtual Guest Management icon:asterisk | icon:check[role="green"] | icon:check[role="green"]
+| Basic Virtual Guest Management icon:asterisk | ``Salt`` | ``Salt``
 | Advanced Virtual Guest Management icon:asterisk | ``Salt`` | ``Salt``
 | Virtual Guest Installation (Kickstart), as Host OS | icon:times[role="danger"] | icon:times[role="danger"]
 | Virtual Guest Installation (image template), as Host OS | ``Salt`` | ``Salt``
